@@ -1,6 +1,11 @@
 Please see NEWS for a summary of changes since the last release suitable
 for announcements.
 
+* Fri Sep 21 2012 Thunor <thunorsif@hotmail.com>
+- Added an inotify alternative to the GIO file monitor which is very
+  fast but unfortunately there's a 128 file descriptor limit so I've
+  disabled it in configure.in.
+
 * Thu Sep 20 2012 Thunor <thunorsif@hotmail.com>
 - Removed rate-limit from docs as it means "the rate limit to which the
   monitor will report consecutive change events to the same file" and
